crates/gaia/outputs/tj_diag.txt
   Compiling cfd-mesh v0.1.0 (C:\Users\RyanClanton\gcli\software\millifluidic_design\CFDrs\crates\cfd-mesh)
error[E0277]: `&FaceStore` is not an iterator
   --> crates\cfd-mesh\src\application\csg\boolean\indexed.rs:381:33
    |
381 |                     for face in &mesh.faces {
    |                                 ^^^^^^^^^^^ `&FaceStore` is not an iterator
    |
    = help: the trait `Iterator` is not implemented for `&FaceStore`
    = note: required for `&FaceStore` to implement `IntoIterator`

error[E0608]: cannot index into a value of type `VertexPool`
   --> crates\cfd-mesh\src\application\csg\boolean\indexed.rs:396:51
    |
396 | ...                   let va = mesh.vertices[a];
    |                                             ^^^

error[E0608]: cannot index into a value of type `VertexPool`
   --> crates\cfd-mesh\src\application\csg\boolean\indexed.rs:397:51
    |
397 | ...                   let vb = mesh.vertices[b];
    |                                             ^^^

Some errors have detailed explanations: E0277, E0608.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `cfd-mesh` (lib) due to 3 previous errors
warning: build failed, waiting for other jobs to finish...
error[E0277]: `&face_store::FaceStore` is not an iterator
   --> crates\cfd-mesh\src\application\csg\boolean\indexed.rs:381:33
    |
381 |                     for face in &mesh.faces {
    |                                 ^^^^^^^^^^^ `&face_store::FaceStore` is not an iterator
    |
    = help: the trait `Iterator` is not implemented for `&face_store::FaceStore`
    = note: required for `&face_store::FaceStore` to implement `IntoIterator`

error[E0608]: cannot index into a value of type `vertex_pool::VertexPool`
   --> crates\cfd-mesh\src\application\csg\boolean\indexed.rs:396:51
    |
396 | ...                   let va = mesh.vertices[a];
    |                                             ^^^

error[E0608]: cannot index into a value of type `vertex_pool::VertexPool`
   --> crates\cfd-mesh\src\application\csg\boolean\indexed.rs:397:51
    |
397 | ...                   let vb = mesh.vertices[b];
    |                                             ^^^

error: could not compile `cfd-mesh` (lib test) due to 3 previous errors
